# FilteringExercise

./: CMakeLists.txt  README.md
data/: noisy.data  visualize.m
include/: filter.h  information_filter.h  kalman_filter.h  linear_measurement_model.h  linear_motion_model.h  measurement_model.h  motion_model.h
src/: information_filter.cpp  kalman_filter.cpp  main.cpp
